--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,9 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ /public/css/poole.css/ | relative_url }}"> 
-  <link rel="stylesheet" href="{{ /public/css/poole.css/ | relative_url }}">
-  <link rel="stylesheet" href="{{ /public/css/poole.css/ | relative_url }}">
+  <link rel="stylesheet" href="{{ / | relative_url }}"> 
+  <link rel="stylesheet" href="{{ / | relative_url }}">
+  <link rel="stylesheet" href="{{ / | relative_url }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
