--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,9 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-          <img width="85%" height="85%"src="https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/79941153_2588043301313045_5936260293360353280_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWgf6iGFQaMAX9OwN1q&tn=y6pBFxAINEtrSq5v&_nc_ht=scontent-lga3-2.xx&oh=00_AT9NP_uEqJbjE5N86S_y4VApW1FJInVCXU-x1j44s42DfQ&oe=6287C122" alt="Profile Picture">
+          <img width="65%" height="65%"src="https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/79941153_2588043301313045_5936260293360353280_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWgf6iGFQaMAX9OwN1q&tn=y6pBFxAINEtrSq5v&_nc_ht=scontent-lga3-2.xx&oh=00_AT9NP_uEqJbjE5N86S_y4VApW1FJInVCXU-x1j44s42DfQ&oe=6287C122" alt="Profile Picture">
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <h1 class="lead">{{ site.description }}</h1>
     </div>
 
     <nav class="sidebar-nav">
@@ -28,6 +28,5 @@
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
       <a class="sidebar-nav-item" href="normanqian@gmail.com">Email</a>
     </nav>
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
