changing font sizes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,9 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-          <img width="65%" height="65%"src="https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/79941153_2588043301313045_5936260293360353280_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWgf6iGFQaMAX9OwN1q&tn=y6pBFxAINEtrSq5v&_nc_ht=scontent-lga3-2.xx&oh=00_AT9NP_uEqJbjE5N86S_y4VApW1FJInVCXU-x1j44s42DfQ&oe=6287C122" alt="Profile Picture">
+          <img width="95%" height="95%"src="https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/79941153_2588043301313045_5936260293360353280_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWgf6iGFQaMAX9OwN1q&tn=y6pBFxAINEtrSq5v&_nc_ht=scontent-lga3-2.xx&oh=00_AT9NP_uEqJbjE5N86S_y4VApW1FJInVCXU-x1j44s42DfQ&oe=6287C122" alt="Profile Picture">
       </h1>
-      <h1 class="lead">{{ site.description }}</h1>
+      <h1 class="lead"style="font-size: 2em">{{ site.description }}</h1>
     </div>
 
     <nav class="sidebar-nav">
