--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
       <a class="sidebar-nav-item" href="https://www.linkedin.com/in/norman-qian/">LinkedIn</a>
       <a class="sidebar-nav-item" href="https://twitter.com/normanqian">Twitter</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
-      <a class="sidebar-nav-item" href="normanqian@gmail.com">Email</a>
+      <span class="sidebar-nav-item">normanqian@gmail.com</span>
     </nav>
   </div>
 </div>
