--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-          <img width="95%" height="95%"src="../profilep.jpg" alt="Profile Picture">
+          <img width="95%" height="95%"src="../websiteprofilepic.jpg" alt="Profile Picture">
       </h1>
       <h1 class="lead"style="font-size: 2em; font-family: Times New Roman, Times,serif;">{{ site.description }}</h1>
     </div>
