--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,42 @@
-@keyframes float {
-  0% {
-    transform: translateY(0) translateX(0);
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  50% {
-    transform: translateY(100vh) translateX(100vw);
-    rotate: 180deg;
-  }
-  100% {
-    transform: translateY(0) translateX(0);
-    filter: brightness(1);
+  to {
+    transform: rotate(360deg);
   }
 }
 
-/* Default styles for desktop */
-.desktop-view {
-  display: block;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-.mobile-view {
-  display: none;
+.card {
+  padding: 2em;
 }
 
-/* Media query for mobile devices */
-@media (max-width: 767px) {
-  .desktop-view {
-    display: none;
-  }
-
-  .mobile-view {
-    display: block;
-  }
+.read-the-docs {
+  color: #888;
 }
